--- a/styles/main.css
+++ b/styles/main.css
@@ -8,15 +8,13 @@ body {
   flex-wrap: wrap;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   justify-content: center;
   margin: 0;
   padding: 50px;
-  /* background-color: rgb(56, 56, 55); */
   background: url('https://img5.goodfon.com/wallpaper/nbig/8/f3/zmeia-zhalo-chiornyi-fon-tiomnyi-fon.jpg');
   background-size: cover;
-  /* background-color: white; */
   color: white;
-  /* color: black; */
 
   font-family: 'Londrina Outline', cursive;
   letter-spacing: 3px;
@@ -44,11 +42,9 @@ h1 {
   max-width: 600px;
   border-radius: 10px;
   background-color: rgba(177,190,57, 0.5)
-  /* background-color: black; */
 }
 
 .grid div {
-  /* border: 1px solid; */
   flex-grow: 1;
   height: 5%;
   width: 5%;
@@ -58,7 +54,6 @@ h1 {
   background-color: black;
   opacity: 0.5;
   border: solid  rgb(177,190,57, 0.7) 1px;
-  /* border: solid white 1px; */
   background-size: 300px;
   background-position-x: 0;
   background-position-y: 0;
